Fixed horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@ p {
   color: black;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 
 /*--------------------------------------------------Nav*/
 
@@ -410,7 +415,7 @@ h5 {
   text-align: center;
   background: #e5e5e5;
   width: 100%;
-  height: 250px;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
